Updated gradle.build